[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Do Tien Bien <dotienbien93@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = {extras = ["standard"], version = ">=0.40.0,<0.41.0"}

[tool.poetry.dev-dependencies]
# nếu có dev dependencies, thêm ở đây

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
